--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -76,13 +76,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/line"
         app:layout_constraintVertical_bias="0.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/reviewLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -98,7 +98,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="130dp"
+                    android:layout_marginTop="20dp"
                     android:text="맛"
                     android:textColor="#000000"
                     android:textSize="20sp"
@@ -110,9 +110,9 @@
                     android:id="@+id/taste_image"
                     android:layout_width="70dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/taste_score"
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
+                    android:src="@drawable/taste_score"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/taste_textView" />
 
@@ -256,8 +256,8 @@
                     android:id="@+id/twoseat"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:layout_marginStart="12dp"
+                    android:layout_marginTop="15dp"
                     android:text="2인좌석"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -381,8 +381,8 @@
                     android:id="@+id/study_image"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
-                    android:layout_marginTop="5dp"
                     android:layout_marginStart="15dp"
+                    android:layout_marginTop="5dp"
                     android:src="@drawable/study_score"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/study_textView" />
@@ -391,9 +391,9 @@
                     android:id="@+id/wifi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="와이파이"
-                    android:layout_marginTop="15dp"
                     android:layout_marginStart="12dp"
+                    android:layout_marginTop="15dp"
+                    android:text="와이파이"
                     android:textColor="@color/black"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/study_image"
@@ -405,9 +405,9 @@
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:isIndicator="false"
                     android:layout_marginStart="12dp"
                     android:layout_marginTop="17dp"
+                    android:isIndicator="false"
                     android:numStars="5"
                     android:progressDrawable="@drawable/rating_custom"
                     android:stepSize="1"
@@ -444,8 +444,8 @@
                     android:id="@+id/quiet"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
                     android:layout_marginStart="25dp"
+                    android:layout_marginTop="15dp"
                     android:text="조용함"
                     android:textColor="@color/black"
                     android:textStyle="bold"
@@ -457,8 +457,8 @@
                     style="@style/Widget.AppCompat.RatingBar.Small"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="17dp"
                     android:layout_marginStart="18dp"
+                    android:layout_marginTop="17dp"
                     android:isIndicator="false"
                     android:numStars="5"
                     android:progressDrawable="@drawable/rating_custom"
@@ -496,7 +496,7 @@
                     android:id="@+id/rating_line"
                     android:layout_width="match_parent"
                     android:layout_height="2dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="20dp"
                     android:background="@color/black"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -516,20 +516,20 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="20dp"
                     android:text="태그 추가"
                     android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"  />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/caution_textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="52dp"
-                    android:layout_marginTop="18dp"
+                    android:layout_marginTop="23dp"
                     android:text="※ 최대 3개까지 추가 가능해요!"
                     android:textColor="@color/black"
                     android:textSize="15sp"
@@ -550,8 +550,101 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
 
+                <TextView
+                    android:id="@+id/select_tag2"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="16dp"
+                    android:background="@drawable/selected_tag_textview"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/select_tag3"
+                    app:layout_constraintStart_toEndOf="@+id/select_tag1"
+                    app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
+
+                <TextView
+                    android:id="@+id/select_tag3"
+                    android:layout_width="100dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/selected_tag_textview"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    android:textStyle="bold"
+                    app:layout_constraintEnd_toStartOf="@+id/add_cafe_button"
+                    app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
+
+                <Button
+                    android:id="@+id/add_cafe_button"
+                    android:layout_width="60dp"
+                    android:layout_height="35dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/edge_square_brown"
+                    android:text="추가"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/tag_textView" />
+
+                <TextView
+                    android:id="@+id/tag_line"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="20dp"
+                    android:background="@color/black"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/select_tag2" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/buttonLayout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tagLayout">
+
+                <Button
+                    android:id="@+id/request_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="80dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/edge_square_brown"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="코멘터리 >"
+                    android:textColor="#FFFFFF"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <Button
+                    android:id="@+id/finish_button"
+                    android:layout_width="108dp"
+                    android:layout_height="45dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="80dp"
+                    android:layout_marginBottom="20dp"
+                    android:background="@drawable/edge_square_brown"
+                    android:text="작성완료"
+                    android:textColor="#FFFFFF"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
