fragment_cafe_registration 레이아웃 묶기 완성

--- a/app/src/main/res/layout/fragment_list_cafelist.xml
+++ b/app/src/main/res/layout/fragment_list_cafelist.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cafe_search_input">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/scrollLayout"
+            android:id="@+id/registrationLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
