--- a/app/src/main/res/layout/fragment_cafe_modify.xml
+++ b/app/src/main/res/layout/fragment_cafe_modify.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/scrollLayout"
+            android:id="@+id/registrationLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -339,7 +339,7 @@
        suwon_univ@gmail.com"
                 android:textColor="#000000"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="@+id/scrollLayout"
+                app:layout_constraintBottom_toBottomOf="@+id/registrationLayout"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/request_deletion_textView" />
